Changelog:

Version 0.99.5
 - Fixed missing energyRecovery for Drones
 - Updated JA translation from transifex

Version 0.99.4
 - Added Translations for Japanese language, ja (TRANSIFEX)
 - Added Translations for Russian language, ru (TRANSIFEX)
 - Added Translations for British English language  en-GB (TRANSIFEX)
 - Added turned Versions for UBASE_01 (4 Maps total)
 - Added alternate/turned Version 1 for UBASE_01 (4 maps total)
 - Added alternate/turned Version 2 for UBASE_01 (4 maps total)
 - Added turned Version for EXPANDEDUBASE_19 (4 maps total)
 - Added turned Version for EXPANDEDUBASE_20 (4 maps total)
 - Added turned Version for EXPANDEDUBASE_21 (4 maps total) Clonelab
 - Added Soldier Armor Upgrades
 - Added Tank Upgrades
 - Added FloorOb Sprites for Vanilla Plasma Weapons
 - Added Fire Grenade (converted Fire Bombs)
 - Added Modified Sprite for U_EXT02 (remove shadows)
 - Fix Wrong production requirements for some Drone Upgrades
 - Fix naming issue with Alloy Drone Medikit repair
 - Fix Runvarnames for some Missionscripts
 - Upgrade Heavy Laser Autoshot (now shots 4 times)
 - Adjusted Weapondamage for balancing (Heavy Laser/Sniper, Scatter Laser, Plasma Shotgun, Plasma Sniper)
 - Adjusted Ruleset to latest changes in : openxcom_git_master_2018_09_17_0112 or newer
 - Adjusted Missions generated from Alien Bases (Region inheritance)
 - Adjusted Smoke and Fire Bomb to be collectable (Burn Baby Burn)
 - Adjust Alive Alien Interrogation Consequences

Version 0.99.3
 - Final Ressource File Restructure
 - Turning THUNDER by 90 degree (Unified Craft MapSize)
 - Fix Tile and Route issue for LINERSHIP00.MAP
 - Fix CRAFT spawn for CARGOSHIP
 - Fix Soldier Armor Repair in Research Tree Graphic
 - Fix Alien Grenade / Elerium Rocket Research and Graphic
 - Fix Wall issue for UFO_190m.MAP
 - Fix out of boundary nodes for some Maps
 - Fix missing usage information on medical items/drones
 - Fix Several extraStrings Typos
 - Fix Missing Name String for MALE_CIVILIAN