@@ -1111,7 +1111,7 @@ en-GB:
 # EUROPEAN CITIES
   STR_ABERDEEN: "Aberdeen"
   STR_ALEPPO: "Aleppo"
-  STR_AMESTERDAM: "Amesterdam"
+  STR_AMSTERDAM: "Amsterdam"
   STR_ANTALYA: "Antalya"
   STR_ARCHANGEL: "Arkhangelsk"
   STR_ASTRAKHAN: "Astrakhan"
