@@ -1111,7 +1111,7 @@ ja:
 # EUROPEAN CITIES
   STR_ABERDEEN: "アバディーン"
   STR_ALEPPO: "アレッポ"
-  STR_AMESTERDAM: "アムステルダム"
+  STR_AMSTERDAM: "アムステルダム"
   STR_ANTALYA: "アンタルヤ"
   STR_ARCHANGEL: "アルハンゲリスク"
   STR_ASTRAKHAN: "アストラハン"
