@@ -1077,7 +1077,7 @@ ru:
 # EUROPEAN CITIES
   STR_ABERDEEN: "Абердин"
   STR_ALEPPO: "Алеппо"
-  STR_AMESTERDAM: "Амстердам"
+  STR_AMSTERDAM: "Амстердам"
   STR_ANTALYA: "Анталия"
   STR_ARCHANGEL: "Архангельск"
   STR_ASTRAKHAN: "Астрахань"
