@@ -324,7 +324,7 @@ regions:
 #NEW CITIES
         - [357.58, 357.58, -57.18, -57.18, -7, STR_ABERDEEN]
         - [37.13, 37.13, -36.18, -36.18, -6, STR_ALEPPO]
-        - [4.86, 4.86, -52.76, -52.76, -2, STR_AMESTERDAM]
+        - [4.86, 4.86, -52.76, -52.76, -2, STR_AMSTERDAM]
         - [30.8, 30.8, -36.75, -36.75, -1, STR_ANTALYA]
         - [40.87, 40.87, -64.44, -64.44, -7, STR_ARCHANGEL]
         - [48.499, 48.499, -45.774, -45.774, -1, STR_ASTRAKHAN]
